--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -2,6 +2,9 @@ name: Validate/Lint
 
 on: [push, pull_request]
 
+permissions:
+  contents: read
+
 jobs:
  build:
   runs-on: ${{ matrix.operating-system }}
