--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,3 +6,8 @@ updates:
     open-pull-requests-limit: 10
     schedule:
       interval: "weekly"
+  - package-ecosystem: "composer"
+    directory: "/"
+    open-pull-requests-limit: 10
+    schedule:
+      interval: "weekly"
