--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "chart.js": "^3.8.0",
     "codemirror": "^6.0.1",
     "croppie": "^2.6.5",
+    "dexie": "^3.2.2",
     "dom-walk": "^0.1.2",
     "fontawesome-free": "^1.0.4",
     "infinite-scroll": "^4.0.1",
