--- a/objects/htaccess_for_videos.conf
+++ b/objects/htaccess_for_videos.conf
@@ -5,7 +5,7 @@
 <IfModule authz_core_module>
     Require all denied
 </IfModule>
-<filesMatch "\.(ico|pdf|flv|jpg|jpeg|png|gif|swf|ts|txt|mp4|mp3|m3u8|webp|key|css|tff|woff|woff2)$">
+<filesMatch "\.(ico|pdf|flv|jpg|jpeg|png|gif|swf|ts|txt|mp4|mp3|m3u8|webp|key|css|tff|woff|woff2|webm)$">
     <IfModule !authz_core_module>
         Order Allow,Deny
         Allow from all
