--- a/objects/htaccess_for_videos.conf
+++ b/objects/htaccess_for_videos.conf
@@ -1,3 +1,4 @@
+# version 2.0
 <IfModule !authz_core_module>
     Order Allow,Deny
     Deny from all
@@ -5,7 +6,7 @@
 <IfModule authz_core_module>
     Require all denied
 </IfModule>
-<filesMatch "\.(ico|pdf|flv|jpg|jpeg|png|gif|swf|ts|txt|mp4|mp3|m3u8|webp|key|css|tff|woff|woff2|webm)$">
+<filesMatch "\.(ico|pdf|flv|jpg|jpeg|png|gif|swf|ts|txt|mp4|mp3|m3u8|webp|key|css|tff|woff|woff2|webm|js)$">
     <IfModule !authz_core_module>
         Order Allow,Deny
         Allow from all
