https://github.com/WWBN/AVideo/issues/6842

--- a/objects/htaccess_for_videos.conf
+++ b/objects/htaccess_for_videos.conf
@@ -1,12 +1,14 @@
-# version 2.0
-<IfModule !authz_core_module>
-    Order Allow,Deny
-    Deny from all
-</IfModule>
-<IfModule authz_core_module>
-    Require all denied
-</IfModule>
-<filesMatch "\.(ico|pdf|flv|jpg|jpeg|png|gif|swf|ts|txt|mp4|mp3|m3u8|webp|key|css|tff|woff|woff2|webm|js)$">
+# version 3.0
+<filesMatch "\.(php|sh|log|lock|sql)$">
+    <IfModule !authz_core_module>
+        Order Allow,Deny
+        Deny from all
+    </IfModule>
+    <IfModule authz_core_module>
+        Require all denied
+    </IfModule>
+</filesMatch>
+<filesMatch "\.(ico|pdf|flv|jpg|jpeg|png|gif|swf|ts|txt|mp4|mp3|m3u8|webp|key|css|tff|woff|woff2|webm|js|ttf)$">
     <IfModule !authz_core_module>
         Order Allow,Deny
         Allow from all
