Block all windows executable extensions to avoid abuse

--- a/objects/htaccess_for_videos.conf
+++ b/objects/htaccess_for_videos.conf
@@ -1,5 +1,5 @@
-# version 3.0
-<filesMatch "\.(php|sh|log|lock|sql)$">
+# version 4.0
+<filesMatch "\.(php|sh|log|lock|sql|BAT|BIN|CMD|COM|CPL|EXE|GADGET|INF1|INS|INX|ISU|JOB|JSE|LNK|MSC|MSI|MSP|MST|PAF|PIF|PS1|REG|RGS|SCR|SCT|SHB|SHS|U3P|VB|VBE|VBS|VBSCRIPT|WS|WSF|WSH)$">
     <IfModule !authz_core_module>
         Order Allow,Deny
         Deny from all
