https://github.com/WWBN/AVideo/commit/b4a3883081d865fa657c2bfa55e243b1b7eec26e#commitcomment-78223062

--- a/objects/htaccess_for_videos.conf
+++ b/objects/htaccess_for_videos.conf
@@ -1,5 +1,5 @@
-# version 4.0
-<filesMatch "\.(php[a-z0-9]?|phtml|sh|log|lock|sql|bat|bin|cmd|com|cpl|exe|gadget|inf1|ins|inx|isu|job|jse|lnk|msc|msi|msp|mst|paf|pif|ps1|reg|rgs|scr|sct|shb|shs|u3p|vb|vbe|vbs|vbscript|ws|wsf|wsh|bak|config|inc|bkp)$">
+# version 5.0
+<filesMatch "(?i)\.(php[a-z0-9]?|phtml|sh|log|lock|sql|bat|bin|cmd|com|cpl|exe|gadget|inf1|ins|inx|isu|job|jse|lnk|msc|msi|msp|mst|paf|pif|ps1|reg|rgs|scr|sct|shb|shs|u3p|vb|vbe|vbs|vbscript|ws|wsf|wsh|bak|config|inc|bkp)$">
     <IfModule !authz_core_module>
         Order Allow,Deny
         Deny from all
