--- a/objects/htaccess_for_videos.conf
+++ b/objects/htaccess_for_videos.conf
@@ -8,7 +8,7 @@
         Require all denied
     </IfModule>
 </filesMatch>
-<filesMatch "\.(ico|pdf|flv|jpg|jpeg|png|gif|swf|ts|txt|mp4|mp3|m3u8|webp|key|css|tff|woff|woff2|webm|js|ttf)$">
+<filesMatch "(?i)\.(ico|pdf|flv|jpg|jpeg|png|gif|swf|ts|txt|mp4|mp3|m3u8|webp|key|css|tff|woff|woff2|webm|js|ttf)$">
     <IfModule !authz_core_module>
         Order Allow,Deny
         Allow from all
