--- a/.htaccess
+++ b/.htaccess
@@ -54,7 +54,7 @@ Options All -Indexes
     <filesMatch "\VMAP.php$">
         Header set Access-Control-Allow-Origin: *
     </filesMatch>
-    <filesMatch "\.(ico|pdf|flv|jpg|jpeg|png|gif|swf|ts)$">
+    <filesMatch "\.(ico|pdf|flv|jpg|jpeg|png|gif|swf|ts|webp)$">
         Header set Access-Control-Allow-Origin: *
         Header set Cache-Control "max-age=2592000, public"
     </filesMatch>
