--- a/.htaccess
+++ b/.htaccess
@@ -340,7 +340,7 @@ Options All -Indexes
 
 
     <IfModule mod_xsendfile.c>
-        RewriteRule    ^videos/([_A-Za-z0-9.-]+/)?([^!#$&'()*+,\/:;=?@[\]]+(\.(mp4|webm|m3u8|mp3|ogg)))$ view/xsendfile.php?file=$2    [QSA]
+        RewriteRule    ^videos/([_A-Za-z0-9.-]+/)?([^!#$&'()*+,\/:;=?@[\]]+(\.(mp4|webm|m3u8|mp3|ogg)))$ view/xsendfile.php?file=$2&folder=$1    [QSA]
         RewriteRule    ^videos/cache/download/([_A-Za-z0-9.-]+/)?([^!#$&'()*+,\/:;=?@[\]]+(\.(mp4|webm|m3u8|mp3|ogg)))$ view/xsendfile.php?file=$2&cacheDownload=1    [QSA]
     </IfModule>
 
