--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "js-cookie": "^3.0.1",
     "keycode": "^2.2.1",
     "moment-timezone": "^0.5.34",
+    "nosleep.js": "^0.12.0",
     "pouchdb": "^7.3.0",
     "sweetalert": "^2.1.2",
     "tinymce": "^6.1.2",
