--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery-toast-plugin": "^1.3.2",
     "jquery-ui": "^1.13.2",
     "jquery-ui-dist": "^1.13.2",
+    "js-circle-progress": "^0.2.4",
     "js-cookie": "^3.0.1",
     "keycode": "^2.2.1",
     "moment-timezone": "^0.5.37",
