--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "view/js/jquery-dialogextend"] 
   path = view/js/jquery-dialogextend 
-  url = git://github.com/ROMB/jquery-dialogextend.git
+  url = https://github.com/ROMB/jquery-dialogextend.git
