--- a/.htaccess
+++ b/.htaccess
@@ -161,8 +161,8 @@ Options All -Indexes
     RewriteRule    ^video/([0-9]+)/?$ view/modeYoutube.php?v=$1 [QSA]
     RewriteRule    ^video/([^!#$&'()*,\/:;=?@[\]]+)/?$ view/modeYoutube.php?videoName=$1    [QSA]
     RewriteRule    ^video/([^!#$&'()*,\/:;=?@[\]]+)/page/([0-9]+)/??$ view/modeYoutube.php?videoName=$1&page=$2    [QSA]
-    RewriteRule    ^v/([0-9a-zA-Z_.-]+)/?$ view/modeYoutube.php?v=$1    [QSA]
     RewriteRule    ^v/([0-9a-zA-Z_.-]+)/page/([0-9]+)/??$ view/modeYoutube.php?v=$1&page=$2     [QSA]
+    RewriteRule    ^v/([0-9a-zA-Z_.-]+)/? view/modeYoutube.php?v=$1    [QSA]
     RewriteRule    ^video/([0-9a-zA-Z_.-]+)/([0-9]+)?$ view/modeYoutube.php?videoName=$1    [QSA]
     RewriteRule    ^video/([0-9a-zA-Z_.-]+)/([^!#$&'()*,\/:;=?@[\]]+)/?$ view/modeYoutube.php?v=$1    [QSA]
     RewriteRule    ^video/([0-9a-zA-Z_.-]+)/([^!#$&'()*,\/:;=?@[\]]+)/page/([0-9]+)/??$ view/modeYoutube.php?v=$1&page=$3     [QSA]
