--- a/.htaccess
+++ b/.htaccess
@@ -222,7 +222,7 @@ Options All -Indexes
     RewriteRule    ^deleteUser$ objects/userDelete.json.php    [NC,L]
     RewriteRule    ^recoverPass$ objects/userRecoverPass.php    [NC,L]
     RewriteRule    ^saveRecoverPassword$ objects/userRecoverPassSave.json.php    [NC,L]
-    RewriteRule    ^signUp$ view/signUp.php    [NC,L]
+    RewriteRule    ^signUp$ view/userSignUp.php    [NC,L]
     RewriteRule    ^createUser$ objects/userCreate.json.php    [NC,L]
 
 
