--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@silvermine/videojs-chromecast": "^1.3.4",
     "animate.css": "^4.1.1",
+    "bootstrap": "^5.2.3",
     "chart.js": "^4.2.1",
     "codemirror": "^6.0.1",
     "croppie": "^2.6.5",
