--- a/deploy/apache/avideo.conf
+++ b/deploy/apache/avideo.conf
@@ -1,29 +1,40 @@
-<VirtualHost *:80>
-    ServerName SERVER_NAME
+<VirtualHost localhost:80>
+    ServerName localhost
     ServerAdmin CONTACT_EMAIL
     DocumentRoot "/var/www/html/AVideo"
-
     ErrorLog /dev/stderr
+    CustomLog ${APACHE_LOG_DIR}/access.log combined
     TransferLog /dev/stdout 
-
-    RewriteEngine On
-    RewriteCond %{HTTPS} off
-    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI}
 </VirtualHost>
-
-<VirtualHost *:443>
-    ServerName SERVER_NAME
+<VirtualHost localhost:443>
+    ServerName localhost
     ServerAdmin CONTACT_EMAIL
     DocumentRoot "/var/www/html/AVideo"
 
     ErrorLog /dev/stderr
+    CustomLog ${APACHE_LOG_DIR}/access.log combined
     TransferLog /dev/stdout 
 
     SSLEngine on
     SSLCertificateFile TLS_CERTIFICATE_FILE
     SSLCertificateKeyFile TLS_CERTIFICATE_KEY
 </VirtualHost>
-
+<VirtualHost *:80>
+    ServerName SERVER_NAME
+    ServerAdmin CONTACT_EMAIL
+    DocumentRoot "/var/www/html/AVideo"
+    ErrorLog /dev/stderr
+    CustomLog ${APACHE_LOG_DIR}/access.log combined
+    TransferLog /dev/stdout 
+</VirtualHost>
+<VirtualHost *:443>
+    ServerName SERVER_NAME
+    ServerAdmin CONTACT_EMAIL
+    DocumentRoot "/var/www/html/AVideo"
+    ErrorLog /dev/stderr
+    CustomLog ${APACHE_LOG_DIR}/access.log combined
+    TransferLog /dev/stdout 
+</VirtualHost>
 <Directory /var/www/html/AVideo/>
     Options Indexes FollowSymLinks
     XSendFile on
