--- a/env.example
+++ b/env.example
@@ -1,5 +1,13 @@
-webSiteRootURL={webSiteRootURL}
-# Exposed HTTP port
-HTTP_PORT={HTTP_PORT}
-HTTPS_PORT={HTTPS_PORT}
-Socket_PORT={Socket_PORT}
+SERVER_NAME=localhost
+
+SOCKET_PORT=2053
+HTTP_PORT=80
+HTTPS_PORT=443
+NGINX_RTMP_PORT=1935
+NGINX_HTTP_PORT=8080
+NGINX_HTTPS_PORT=8443
+DB_MYSQL_HOST=database
+DB_MYSQL_PORT=3306
+DB_MYSQL_NAME=avideo
+DB_MYSQL_USER=avideo
+DB_MYSQL_PASSWORD=avideo
