--- a/deploy/nginx/nginx.conf
+++ b/deploy/nginx/nginx.conf
@@ -1,6 +1,6 @@
 user www-data;
 worker_processes 1;
-error_log logs/error.log debug;
+error_log stderr debug;
 events {
         worker_connections 1024;
 }
@@ -26,10 +26,10 @@ rtmp {
                         sync 500ms;
                         #Experimental. Force dropped stream, or ended stream from being watched. (idle_streams)
                         #idle_streams off;
-                        on_publish http://127.0.0.1/plugin/Live/on_publish.php;
-                        on_publish_done http://127.0.0.1/plugin/Live/on_publish_done.php;
-                        on_play http://127.0.0.1/plugin/Live/on_play.php;
-                        on_record_done http://127.0.0.1/plugin/Live/on_record_done.php;
+                        on_publish http://avideo/plugin/Live/on_publish.php;
+                        on_publish_done http://avideo/plugin/Live/on_publish_done.php;
+                        on_play http://avideo/plugin/Live/on_play.php;
+                        on_record_done http://avideo/plugin/Live/on_record_done.php;
 
                         #exec ffmpeg -re -i rtmp://localhost/live/$name -c:v libx264 -preset veryfast -c:a copy -f hls -hls_time 5 -hls_list_size 0 -f flv rtmp://localhost/adaptive/$name_hi;
                         #exec ffmpeg -re -i rtmp://localhost/live/$name
