--- a/deploy/apache/avideo.conf
+++ b/deploy/apache/avideo.conf
@@ -1,20 +1,17 @@
+php_flag log_errors on
+php_value error_log /dev/stderr
+ErrorLog /dev/stderr
+CustomLog ${APACHE_LOG_DIR}/access.log combined
+TransferLog /dev/stdout 
 <VirtualHost localhost:80>
     ServerName localhost
     ServerAdmin CONTACT_EMAIL
     DocumentRoot "/var/www/html/AVideo"
-    ErrorLog /dev/stderr
-    CustomLog ${APACHE_LOG_DIR}/access.log combined
-    TransferLog /dev/stdout 
 </VirtualHost>
 <VirtualHost localhost:443>
     ServerName localhost
     ServerAdmin CONTACT_EMAIL
     DocumentRoot "/var/www/html/AVideo"
-
-    ErrorLog /dev/stderr
-    CustomLog ${APACHE_LOG_DIR}/access.log combined
-    TransferLog /dev/stdout 
-
     SSLEngine on
     SSLCertificateFile TLS_CERTIFICATE_FILE
     SSLCertificateKeyFile TLS_CERTIFICATE_KEY
@@ -23,17 +20,11 @@
     ServerName SERVER_NAME
     ServerAdmin CONTACT_EMAIL
     DocumentRoot "/var/www/html/AVideo"
-    ErrorLog /dev/stderr
-    CustomLog ${APACHE_LOG_DIR}/access.log combined
-    TransferLog /dev/stdout 
 </VirtualHost>
 <VirtualHost *:443>
     ServerName SERVER_NAME
     ServerAdmin CONTACT_EMAIL
     DocumentRoot "/var/www/html/AVideo"
-    ErrorLog /dev/stderr
-    CustomLog ${APACHE_LOG_DIR}/access.log combined
-    TransferLog /dev/stdout 
 </VirtualHost>
 <Directory /var/www/html/AVideo/>
     Options Indexes FollowSymLinks
