--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,6 +45,9 @@ services:
       SYSTEM_ADMIN_PASSWORD: "${SYSTEM_ADMIN_PASSWORD:-password}"
       WEBSITE_TITLE: "${WEBSITE_TITLE:-AVideo}"
       MAIN_LANGUAGE: "${MAIN_LANGUAGE:-en_US}"
+      NGINX_RTMP_PORT: "${NGINX_RTMP_PORT:-1935}"
+      NGINX_HTTP_PORT: "${NGINX_HTTP_PORT:-8080}"
+      NGINX_HTTPS_PORT: "${NGINX_HTTPS_PORT:-8443}"
     env_file:
       - .env
     ports:
@@ -72,7 +75,7 @@ services:
       - app_net
 
   live:
-    build:
+    build: 
       context: .
       dockerfile: Dockerfile.live
     restart: "unless-stopped"
@@ -85,6 +88,9 @@ services:
       CREATE_TLS_CERTIFICATE: "${CREATE_TLS_CERTIFICATE:-yes}"
       TLS_CERTIFICATE_FILE: "${TLS_CERTIFICATE_FILE:-/etc/apache2/ssl/localhost.crt}"
       TLS_CERTIFICATE_KEY: "${TLS_CERTIFICATE_KEY:-/etc/apache2/ssl/localhost.key}"
+      NGINX_RTMP_PORT: "${NGINX_RTMP_PORT:-1935}"
+      NGINX_HTTP_PORT: "${NGINX_HTTP_PORT:-8080}"
+      NGINX_HTTPS_PORT: "${NGINX_HTTPS_PORT:-8443}"
     env_file:
       - .env
     ports:
