--- a/deploy/apache/avideo.conf
+++ b/deploy/apache/avideo.conf
@@ -1,8 +1,8 @@
 php_flag log_errors on
 php_value error_log /dev/stderr
 ErrorLog /dev/stderr
-CustomLog ${APACHE_LOG_DIR}/access.log combined
-TransferLog /dev/stdout 
+#CustomLog ${APACHE_LOG_DIR}/access.log combined
+#TransferLog /dev/stdout 
 <VirtualHost localhost:80>
     ServerName localhost
     ServerAdmin CONTACT_EMAIL
