--- a/deploy/apache/localhost.conf
+++ b/deploy/apache/localhost.conf
@@ -1,4 +1,4 @@
-<VirtualHost localhost:80>
+<VirtualHost *:80>
     ServerName SERVER_NAME
     ServerAlias localhost
     ServerAdmin CONTACT_EMAIL
@@ -8,7 +8,7 @@
     CustomLog ${APACHE_LOG_DIR}/access.log combined
     TransferLog /dev/stdout 
 </VirtualHost>
-<VirtualHost localhost:443>
+<VirtualHost *:443>
     ServerName SERVER_NAME
     ServerAlias localhost
     ServerAdmin CONTACT_EMAIL
