--- a/deploy/apache/localhost.conf
+++ b/deploy/apache/localhost.conf
@@ -1,23 +1,17 @@
+ErrorLog /dev/stderr
+CustomLog ${APACHE_LOG_DIR}/access.log combined
+#TransferLog /dev/stdout 
 <VirtualHost *:80>
     ServerName SERVER_NAME
     ServerAlias localhost
     ServerAdmin CONTACT_EMAIL
     DocumentRoot "/var/www/html/AVideo"
-
-    ErrorLog /dev/stderr
-    CustomLog ${APACHE_LOG_DIR}/access.log combined
-    TransferLog /dev/stdout 
 </VirtualHost>
 <VirtualHost *:443>
     ServerName SERVER_NAME
     ServerAlias localhost
     ServerAdmin CONTACT_EMAIL
     DocumentRoot "/var/www/html/AVideo"
-
-    ErrorLog /dev/stderr
-    CustomLog ${APACHE_LOG_DIR}/access.log combined
-    TransferLog /dev/stdout 
-
     SSLEngine on
     SSLCertificateFile TLS_CERTIFICATE_FILE
     SSLCertificateKeyFile TLS_CERTIFICATE_KEY
