--- a/deploy/apache/avideo.conf
+++ b/deploy/apache/avideo.conf
@@ -1,21 +1,8 @@
 php_flag log_errors on
-php_value error_log /dev/stderr
-ErrorLog /dev/stderr
-#CustomLog ${APACHE_LOG_DIR}/access.log combined
+php_value error_log /dev/stdout
+ErrorLog /dev/stdout
+CustomLog ${APACHE_LOG_DIR}/access.log combined
 #TransferLog /dev/stdout 
-<VirtualHost localhost:80>
-    ServerName localhost
-    ServerAdmin CONTACT_EMAIL
-    DocumentRoot "/var/www/html/AVideo"
-</VirtualHost>
-<VirtualHost localhost:443>
-    ServerName localhost
-    ServerAdmin CONTACT_EMAIL
-    DocumentRoot "/var/www/html/AVideo"
-    SSLEngine on
-    SSLCertificateFile TLS_CERTIFICATE_FILE
-    SSLCertificateKeyFile TLS_CERTIFICATE_KEY
-</VirtualHost>
 <VirtualHost *:80>
     ServerName SERVER_NAME
     ServerAdmin CONTACT_EMAIL
@@ -35,3 +22,16 @@ ErrorLog /dev/stderr
     Order Allow,Deny
     Allow from All
 </Directory>
+<VirtualHost *:80>
+    ServerName localhost
+    ServerAdmin CONTACT_EMAIL
+    DocumentRoot "/var/www/html/AVideo"
+</VirtualHost>
+<VirtualHost *:443>
+    ServerName localhost
+    ServerAdmin CONTACT_EMAIL
+    DocumentRoot "/var/www/html/AVideo"
+    SSLEngine on
+    SSLCertificateFile TLS_CERTIFICATE_FILE
+    SSLCertificateKeyFile TLS_CERTIFICATE_KEY
+</VirtualHost>
