--- a/plugin/Live/install/nginx.conf
+++ b/plugin/Live/install/nginx.conf
@@ -60,7 +60,7 @@ worker_processes  1;
                     #application adaptive {
                     #    live on; 
                     #    hls on; 
-
+                    #    hls_fragment 2s;
                     #    hls_path /HLS/live;
                     #    hls_nested on;
                     #    hls_playlist_length 10m;
