--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "@silvermine/videojs-chromecast": "^1.3.4",
+    "@silvermine/videojs-chromecast": "^1.4.1",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
@@ -33,7 +33,6 @@
     "videojs-font": "^4.1.0",
     "videojs-ima": "^2.1.0",
     "videojs-landscape-fullscreen": "^11.1111.0",
-    "videojs-seek-buttons": "^4.0.3",
-    "wow.js": "^1.2.2"
+    "videojs-seek-buttons": "^4.0.3"
   }
 }
