--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dexie": "^3.2.4",
     "dom-walk": "^0.1.2",
     "flickity": "^3.0.0",
+    "flickity-bg-lazyload": "^2.0.0",
     "fontawesome-free": "^1.0.4",
     "hls.js": "^1.4.7",
     "infinite-scroll": "^4.0.1",
