--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "tinymce-langs": "^1.0.0",
     "video.js": "^8.3.0",
     "videojs-contrib-ads": "^7.2.0",
+    "videojs-contrib-quality-levels": "^4.0.0",
     "videojs-font": "^4.1.0",
     "videojs-ima": "^2.1.0",
     "videojs-landscape-fullscreen": "^11.1111.0",
