--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "videojs-landscape-fullscreen": "^11.1111.0",
     "videojs-playlist": "^5.1.0",
     "videojs-playlist-ui": "^5.0.0",
-    "videojs-seek-buttons": "^4.0.3"
+    "videojs-seek-buttons": "^4.0.3",
+    "videojs-youtube": "^3.0.1"
   }
 }
