--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,7 @@
 /plugin/oncologytube/
 /plugin/predefinedCategory/
 /plugin/FansSubscriptions/
+/plugin/MessageOfTheDay/
 /videos/
 *.zip
 sitemap.xml
