--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,7 @@
 /plugin/predefinedCategory/
 /plugin/FansSubscriptions/
 /plugin/MessageOfTheDay/
+/plugin/InteractiveVideo/
 /videos/
 *.zip
 sitemap.xml
