--- a/.htaccess
+++ b/.htaccess
@@ -375,6 +375,8 @@ Options All -Indexes
 
     RewriteRule    ^vast.xml/?([0-9]+)?$ plugin/AD_Server/VAST.php?campaign_has_videos_id=$1    [NC,L]
 
+    RewriteRule    ^activate/?$ view/activate.php    [NC,L,QSA]
+
 
     <IfModule mod_xsendfile.c>
         RewriteRule    ^videos/([_A-Za-z0-9.-]+/)?([^!#$&'()*+,\/:;=?@[\]]+(\.(mp4|webm|m3u8|mp3|ogg)))$ view/xsendfile.php?file=$2&folder=$1    [QSA]
