--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "videojs-font": "^4.1.0",
     "videojs-ima": "^2.1.0",
     "videojs-landscape-fullscreen": "^11.1111.0",
+    "videojs-overlay": "^3.1.0",
     "videojs-playlist": "^5.1.0",
     "videojs-playlist-ui": "^5.0.0",
     "videojs-seek-buttons": "^4.0.3",
