--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,5 @@ test.php
 /plugin/User_Location/install/install.sql
 /plugin/PedagoFlix/
 /plugin/YPTWebRTC/
+plugin/CustomizeUser/getMyAccount.php
+*.rnd
